# MixedLanguagesTest

./: .gitignore  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt
app/src/: main  main.c
clib/: CMakeLists.txt
clib/inc/: clib.h
clib/src/: clib.c
lib/: CMakeLists.txt
lib/inc/: example_lib.h
lib/src/: example_lib.c
rustlib/: CMakeLists.txt  Cargo.toml
rustlib/inc/: rustlib.h
rustlib/src/: lib.rs
